test infra deployment

--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -134,13 +134,14 @@ jobs:
           terraform apply -var-file=terraform.tfvars tfplan
 
       - name: Output Terraform Data
-        run: terraform output -json 2>/dev/null > outputs.json
+        run: |
+          OUTPUT=$(terraform output -json 2>/dev/null || echo "{}")
+          
+          # Write to file
+          echo "$OUTPUT" > outputs.json
 
       - name: Verify Terraform Outputs
         run: |
-          echo "Current directory contents:"
-          ls -la
-
           echo "Generated outputs.json:"
           ls -la outputs.json
           echo "Content preview:"
