--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -136,13 +136,14 @@ jobs:
       - name: Output Terraform Data
         run: |
           # Generate output
-          terraform output -json > outputs.raw 2>&1
+          terraform output -json 2>/dev/null | python3 -m json.tool > outputs.json 2>/dev/null || echo '{}' > outputs.json
+          # terraform output -json > outputs.raw 2>&1
           
-          # Clean the file - remove first line if it's not JSON
-          sed -i '1{/^{/!d;}' outputs.raw
-          mv outputs.raw outputs.json
+          # # Clean the file - remove first line if it's not JSON
+          # sed -i '1{/^{/!d;}' outputs.raw
+          # mv outputs.raw outputs.json
           
-          echo "Cleaned outputs.json created"
+          # echo "Cleaned outputs.json created"
 
       - name: Verify Terraform Outputs
         run: |
