--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -135,11 +135,11 @@ jobs:
 
       - name: Output Terraform Data
         run: |
-          terraform output -json > outputs.raw 2>&1
+          terraform output -json > outputs.json 2>&1
 
-          # Clean the file - remove first line if it's not JSON
-          sed -i '1{/^{/!d;}' outputs.raw
-          mv outputs.raw outputs.json
+          # # Clean the file - remove first line if it's not JSON
+          # sed -i '1{/^{/!d;}' outputs.raw
+          # mv outputs.raw outputs.json
 
       - name: Verify Terraform Outputs
         run: |
