--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -146,7 +146,7 @@ jobs:
             # Remove first line
             tail -n +2 outputs.json > outputs_clean.json
             mv outputs_clean.json outputs.json
-            sed -i 's/}[^}]*$/}/' outputs.json
+            # sed -i 's/}[^}]*$/}/' outputs.json
 
             echo "Full contents of outputs.json:"
             cat outputs.json
