--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -153,6 +153,25 @@ jobs:
             echo "Full contents of outputs.json:"
             cat outputs.json
           fi
+
+          echo "Total lines in outputs.json:"
+          wc -l outputs.json
+
+          echo -e "\nLines 35-45:"
+          sed -n '35,45p' outputs.json
+
+          echo -e "\nLast 10 lines:"
+          tail -n 10 outputs.json
+
+          echo -e "\nShow invisible characters:"
+          sed -n '35,45p' outputs.json | cat -A
+
+          echo -e "\nHex dump around the problem area:"
+          tail -c 50 outputs.json | xxd
+
+          # Also check what character is at position 859
+          echo -e "\nCharacter at position 859:"
+          dd if=outputs.json bs=1 skip=858 count=10 2>/dev/null | xxd
           
           python3 -c "import json; json.load(open('outputs.json'))" && echo "✓ Valid JSON"
 
