--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -54,7 +54,9 @@ jobs:
           directory: ./Client/coverage
 
       - name: Security audit
-        run: npm audit --audit-level=high
+        run: |
+          npm audit --audit-level=high
+          npm audit fix
 
       - name: Run OWASP dependency check
         uses: dependency-check/Dependency-Check_Action@main
