test backend pipeline

--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -2,7 +2,7 @@ name: Frontend CI/CD Pipeline
 
 on:
   push:
-    branches: [main, staging]
+    branches: [dev, staging]
     paths:
       - 'Client/**'
       - '.github/workflows/frontend-ci-cd.yml'
