--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -105,19 +105,20 @@ jobs:
       - name: Build Docker image
         env:
           DOCKER_BUILDKIT: 1
+          MONGODB_URI_PLACEHOLDER: "mongodb://admin:6paLqd8Qon@localhost/?appName=much-todo-db"
         run: |
           docker build --build-arg BUILDKIT_INLINE_CACHE=1 \
+            --build-arg MONGODB_URI="${{ env.MONGODB_URI_PLACEHOLDER }}" \
             -t ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} \
             -t ${{ env.ECR_REPOSITORY }}:latest .
 
       - name: Scan Docker image
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.68.2 
         with:
           image-ref: '${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}'
           severity: HIGH,CRITICAL
           exit-code: '1'
           ignore-unfixed: true
-          skip-version-check: true
           format: 'sarif'
           output: 'trivy-results.sarif'
 
