--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -113,7 +113,7 @@ jobs:
             -t ${{ env.ECR_REPOSITORY }}:latest .
 
       - name: Scan Docker image
-        uses: aquasecurity/trivy-action@0.68.2 
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}'
           severity: HIGH,CRITICAL
