--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -1,5 +1,9 @@
 name: Backend CI/CD Pipeline
 
+permissions:
+  security-events: write
+  contents: read
+
 on:
   push:
     branches: [main, staging]
@@ -116,6 +120,7 @@ jobs:
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
 
       - name: Scan Docker image from ECR
+        id: trivy-scan
         uses: aquasecurity/trivy-action@0.15.0
         with:
           image-ref: '${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}'
@@ -126,7 +131,7 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: Debug - Show Trivy Results (if scan fails)
-        if: failure()
+        if: steps.trivy-scan.outcome == 'failure'
         run: |
           # Install and run trivy directly
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.68.2
@@ -135,7 +140,7 @@ jobs:
 
       - name: Upload Trivy scan results
         uses: github/codeql-action/upload-sarif@v4
-        if: always()
+        if: always() && steps.trivy-scan.outcome == 'success'
         with:
           sarif_file: 'trivy-results.sarif'
 
