--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -119,6 +119,22 @@ jobs:
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
 
+      - name: Scan Docker image from ECR (with details)
+        id: trivy-scan-detail
+        continue-on-error: true  # Don't fail immediately
+        run: |
+          # Install and run trivy directly
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.68.2
+          
+          echo "=== Running Trivy Scan ==="
+          trivy image \
+            --severity HIGH,CRITICAL \
+            --ignore-unfixed \
+            --format table \
+            ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          
+          echo "=== Exit Code: $? ==="
+
       - name: Scan Docker image from ECR
         id: trivy-scan
         uses: aquasecurity/trivy-action@0.15.0
