--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -137,6 +137,7 @@ jobs:
 
       - name: Scan Docker image from ECR
         id: trivy-scan
+        if: steps.trivy-scan-detail.outcome == 'success'
         uses: aquasecurity/trivy-action@0.15.0
         with:
           image-ref: '${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}'
