--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -142,7 +142,7 @@ jobs:
         with:
           image-ref: '${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}'
           severity: HIGH,CRITICAL
-          exit-code: '1'
+          exit-code: 1
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results.sarif'
