--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -1,8 +1,8 @@
 name: Backend CI/CD Pipeline
 
-permissions:
-  security-events: write
-  contents: read
+# permissions:
+#   security-events: write
+#   contents: read
 
 on:
   push:
@@ -119,22 +119,7 @@ jobs:
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
 
-      # - name: Scan Docker image from ECR (with details)
-      #   id: trivy-scan-detail
-      #   run: |
-      #     # Install and run trivy directly
-      #     curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.68.2
-          
-      #     echo "=== Running Trivy Scan ==="
-      #     trivy image \
-      #       --severity HIGH,CRITICAL \
-      #       --ignore-unfixed \
-      #       --format table \
-      #       ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-          
-      #     echo "=== Exit Code: $? ==="
-
-      - name: Scan Docker image from ECR (SARIF output)
+      - name: Scan Docker image from ECR
         id: trivy-scan
         run: |
           # Install trivy v0.68.2
@@ -158,76 +143,6 @@ jobs:
           sarif_file: ${{ github.workspace }}/trivy-results.sarif
 
 
-  # build:
-  #   needs: test-and-scan
-  #   if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: ./Server/MuchToDo
-
-  #   steps:
-  #     - name: Checkout source
-  #       uses: actions/checkout@v4
-
-  #     - name: Configure AWS Credentials
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ vars.AWS_REGION }}
-
-  #     - name: Login to Amazon ECR
-  #       id: login-ecr
-  #       uses: aws-actions/amazon-ecr-login@v2
-
-  #     - name: Build Docker image
-  #       env:
-  #         DOCKER_BUILDKIT: 1
-  #       run: |
-  #         docker build --build-arg BUILDKIT_INLINE_CACHE=1 \
-  #           -t ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} \
-  #           -t ${{ env.ECR_REPOSITORY }}:latest .
-
-  #     - name: Scan Docker image
-  #       uses: aquasecurity/trivy-action@0.15.0
-  #       with:
-  #         image-ref: '${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}'
-  #         severity: HIGH,CRITICAL
-  #         exit-code: '1'
-  #         ignore-unfixed: true
-  #         format: 'sarif'
-  #         output: 'trivy-results.sarif'
-
-  #     - name: Debug - Show Trivy Results (if scan fails)
-  #       if: failure()
-  #       run: |
-  #         # Try to run trivy again with table format to see what was found
-  #         docker run --rm aquasec/trivy:0.68.2 image \
-  #           --severity HIGH,CRITICAL \
-  #           --ignore-unfixed \
-  #           ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} || true
-
-  #     # - name: Upload Trivy scan results
-  #     #   uses: github/codeql-action/upload-sarif@v4
-  #     #   if: always()
-  #     #   with:
-  #     #     sarif_file: 'trivy-results.sarif'
-
-  #     - name: Tag image for ECR and push
-  #       if: success() && github.ref == 'refs/heads/main'
-  #       run: |
-  #         # Tag for ECR
-  #         docker tag ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} \
-  #           ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-  #         docker tag ${{ env.ECR_REPOSITORY }}:latest \
-  #           ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-          
-  #         # Push to ECR
-  #         docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-  #         docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-
-
   # Deploy pipeline
   deploy:
     needs: build
@@ -245,8 +160,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGION }}
 
-      # Deploy via AWS SSM
-      - name: Deploy to EC2 via SSM
+      - name: Deploy to EC2 via AWS SSM
         run: |
           IFS=',' read -ra IDS <<< "$INSTANCE_IDS"
 
