--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: go-coverage
-          path: coverage.out
+          path: Server/MuchToDo/coverage.out
 
 
   # Build pipeline
@@ -131,7 +131,7 @@ jobs:
             --severity HIGH,CRITICAL \
             --ignore-unfixed \
             --format sarif \
-            --output ${{ github.workspace }}/trivy-results.sarif \
+            --output trivy-results.sarif \
             --exit-code 1 \
             ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
           
@@ -141,7 +141,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
-          sarif_file: ${{ github.workspace }}/trivy-results.sarif
+          sarif_file: Server/MuchToDo/trivy-results.sarif
 
 
   # Deploy pipeline
