--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -44,21 +44,11 @@ jobs:
       - name: Download dependencies
         run: go mod download
 
-      # Code Quality Checks
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.64.8
-          args: --timeout=5m
-          working-directory: Server/MuchToDo
-
       - name: Run unit tests
-        run: |
-          go test ./... -short -race -covermode=atomic -coverprofile=coverage.out
+        run: go test ./... -short -race -covermode=atomic -coverprofile=coverage.out
 
       - name: Run integration tests
-        run: |
-          go test ./... -tags=integration -race
+        run: go test ./... -tags=integration -race
         env:
           DB_HOST: localhost
           DB_PORT: 5432
